next css change - fixing header div on mobiles

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 header {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-color: #04AFF5;
     position: fixed;
